# icu-gobject

./: .editorconfig  README.md  meson.build
src/: icu-constrained-field-position-private.h  icu-constrained-field-position.c  icu-constrained-field-position.h  icu-error-private.h  icu-error.c  icu-error.h  icu-field-category.h  icu-field-position-iterator-private.h  icu-field-position-iterator.c  icu-field-position-iterator.h  icu-field-position.c  icu-field-position.h  icu-formatted-number-private.h  icu-formatted-number.c  icu-formatted-number.h  icu-formatted-value-private.h  icu-formatted-value.c  icu-formatted-value.h  icu-gobject.h  icu-number-format-field.h  icu-number-formatter.c  icu-number-formatter.h  icu-version.c  icu-version.h.in  meson.build
vala/: Icu-0.0.metadata  meson.build
